--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -2,14 +2,15 @@
 <resources>
   <string name="app_name">HealthCareApplication</string>
   <!-- Activity Name -->
-  <string name="activity_signin_name">로그인</string>
+  <string name="activity_sign_in_name">로그인</string>
   <string name="activity_signup_user_name">회원 정보 입력</string>
   <string name="activity_signup_trainer_name">트레이너 정보 입력</string>
-  <string name="activity_typeselect_name">사용자 유형 선택</string>
+  <string name="activity_type_select_name">사용자 유형 선택</string>
   <string name="activity_select_trainer_name">트레이너 선택</string>
   <string name="activity_select_time_name">시간 선택</string>
   <!-- Action -->
   <string name="action_select">선택</string>
+  <string name="action_select_complete">선택 완료</string>
   <!-- Type -->
   <string name="type_user">사용자</string>
   <string name="type_trainer">트레이너</string>
@@ -24,4 +25,6 @@
   <string name="msg_login_successful">로그인 성공</string>
   <string name="msg_login_failed">로그인 실패</string>
   <string name="msg_already_signup">이미 가입된 계정입니다</string>
+  <string name="msg_timetable_saved">선택한 시간표가 저장되었습니다</string>
+  <string name="msg_timetable_not_selected">최소 하나 이상 선택해야합니다</string>
 </resources>
