--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -25,6 +25,6 @@
   <string name="msg_login_successful">로그인 성공</string>
   <string name="msg_login_failed">로그인 실패</string>
   <string name="msg_already_signup">이미 가입된 계정입니다</string>
-  <string name="msg_timetable_saved">선택한 시간표가 저장되었습니다</string>
+  <string name="msg_timetable_added">선택한 시간이 추가되었습니다</string>
   <string name="msg_timetable_not_selected">최소 하나 이상 선택해야합니다</string>
 </resources>
