Add Chat feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
   <string name="action_profile">Profile</string>
   <string name="action_timetable">TimeTable</string>
   <string name="action_chat">Chat</string>
+  <string name="action_send">Send</string>
   <!-- Type -->
   <string name="type_user">User</string>
   <string name="type_trainer">Trainer</string>
