--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,13 @@
   <string name="activity_type_select_name">Select User Type</string>
   <string name="activity_select_trainer_name">Select trainer</string>
   <string name="activity_select_time_name">Select Time</string>
+  <string name="activity_edit_profile">Edit Profile</string>
   <!-- Action -->
   <string name="action_select">Select</string>
   <string name="action_select_complete">Select Complete</string>
   <string name="action_profile">Profile</string>
   <string name="action_timetable">TimeTable</string>
   <string name="action_chat">Chat</string>
-  <string name="action_send">Send</string>
   <!-- Type -->
   <string name="type_user">User</string>
   <string name="type_trainer">Trainer</string>
@@ -24,10 +24,12 @@
   <string name="hint_input_age">Age</string>
   <string name="hint_education">Education</string>
   <string name="hint_awards">Awards</string>
+  <string name="hint_input_gender">Gender</string>
   <!-- Message -->
   <string name="msg_login_successful">Login Successful</string>
   <string name="msg_login_failed">Login failed</string>
   <string name="msg_already_signup">Already Signed Up Account</string>
   <string name="msg_timetable_added">Added time table</string>
   <string name="msg_timetable_not_selected">Select least one</string>
+  <string name="msg_profile_saved">Saved profile</string>
 </resources>
