--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -8,13 +8,13 @@
   <string name="activity_type_select_name">사용자 유형 선택</string>
   <string name="activity_select_trainer_name">트레이너 선택</string>
   <string name="activity_select_time_name">시간 선택</string>
+  <string name="activity_edit_profile">프로필 수정</string>
   <!-- Action -->
   <string name="action_select">선택</string>
   <string name="action_select_complete">선택 완료</string>
   <string name="action_profile">프로필</string>
   <string name="action_timetable">시간표</string>
   <string name="action_chat">대화</string>
-  <string name="action_send">보내기</string>
   <!-- Type -->
   <string name="type_user">사용자</string>
   <string name="type_trainer">트레이너</string>
@@ -25,10 +25,12 @@
   <string name="hint_input_age">나이</string>
   <string name="hint_education">학력</string>
   <string name="hint_awards">수상경력</string>
+  <string name="hint_input_gender">성별</string>
   <!-- Message -->
   <string name="msg_login_successful">로그인 성공</string>
   <string name="msg_login_failed">로그인 실패</string>
   <string name="msg_already_signup">이미 가입된 계정입니다</string>
   <string name="msg_timetable_added">선택한 시간이 추가되었습니다</string>
   <string name="msg_timetable_not_selected">최소 하나 이상 선택해야합니다</string>
+  <string name="msg_profile_saved">프로필이 저장되었습니다</string>
 </resources>
