--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -2,7 +2,6 @@
 <resources>
   <string name="app_name">HealthCareApplication</string>
   <!-- Activity Name -->
-  <string name="activity_sign_in_name">로그인</string>
   <string name="activity_signup_user_name">회원 정보 입력</string>
   <string name="activity_signup_trainer_name">트레이너 정보 입력</string>
   <string name="activity_type_select_name">사용자 유형 선택</string>
@@ -26,9 +25,9 @@
   <string name="hint_awards">수상경력</string>
   <string name="hint_input_gender">성별</string>
   <!-- Message -->
-  <string name="msg_login_successful">로그인 성공</string>
-  <string name="msg_login_failed">로그인 실패</string>
-  <string name="msg_already_signup">이미 가입된 계정입니다</string>
+  <string name="msg_login_cancelled">로그인이 취소되었습니다</string>
+  <string name="msg_login_no_connection">인터넷에 연결되지 않았습니다</string>
+  <string name="msg_login_unknown_error">알 수 없는 오류가 발생하였습니다</string>
   <string name="msg_timetable_added">선택한 시간이 추가되었습니다</string>
   <string name="msg_timetable_not_selected">최소 하나 이상 선택해야합니다</string>
   <string name="msg_profile_saved">프로필이 저장되었습니다</string>
