--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -8,11 +8,14 @@
   <string name="activity_select_trainer_name">트레이너 선택</string>
   <string name="activity_select_time_name">시간 선택</string>
   <string name="activity_edit_profile">프로필 수정</string>
+  <string name="activity_edit_timetable">시간표 수정</string>
   <!-- Action -->
   <string name="action_select_complete">선택 완료</string>
   <string name="action_profile">프로필</string>
   <string name="action_timetable">시간표</string>
   <string name="action_chat">대화</string>
+  <string name="action_complete">완료</string>
+  <string name="action_edit_timetable">시간표 수정</string>
   <!-- Type -->
   <string name="type_user">사용자</string>
   <string name="type_trainer">트레이너</string>
@@ -24,6 +27,7 @@
   <string name="hint_education">학력</string>
   <string name="hint_awards">수상경력</string>
   <string name="hint_input_gender">성별</string>
+  <string name="hint_time">시간</string>
   <!-- Message -->
   <string name="msg_login_cancelled">로그인이 취소되었습니다</string>
   <string name="msg_login_no_connection">인터넷에 연결되지 않았습니다</string>
@@ -31,6 +35,7 @@
   <string name="msg_timetable_added">선택한 시간이 추가되었습니다</string>
   <string name="msg_timetable_not_selected">최소 하나 이상 선택해야합니다</string>
   <string name="msg_profile_saved">프로필이 저장되었습니다</string>
+  <string name="msg_timetable_exist_time">이미 추가된 시간입니다</string>
   <!-- Etc -->
   <string name="empty_item">없음</string>
 </resources>
