--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
   <string name="msg_timetable_exist_time">Exist time</string>
   <!-- Etc -->
   <string name="empty_item">None</string>
+  <string name="hour_format_am">%d:00 AM</string>
+  <string name="hour_format_pm">%d:00 PM</string>
 </resources>
