--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,11 +21,11 @@
   <string name="type_gender_woman">Woman</string>
   <string name="type_gender_man">Man</string>
   <!-- Hint -->
-  <string name="hint_input_name">Name</string>
-  <string name="hint_input_age">Age</string>
+  <string name="hint_name">Name</string>
+  <string name="hint_age">Age</string>
   <string name="hint_education">Education</string>
   <string name="hint_awards">Awards</string>
-  <string name="hint_input_gender">Gender</string>
+  <string name="hint_gender">Gender</string>
   <string name="hint_time">Time</string>
   <!-- Message -->
   <string name="msg_login_cancelled">Login Cancelled</string>
