--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
   <string name="msg_timetable_added">Added time table</string>
   <string name="msg_timetable_not_selected">Select least one</string>
   <string name="msg_profile_saved">Saved profile</string>
+  <string name="msg_profile_save_failed">Failed save profile</string>
   <string name="msg_timetable_exist_time">Exist time</string>
   <!-- Etc -->
   <string name="empty_item">None</string>
