--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -28,7 +28,7 @@
   <string name="hint_name">이름</string>
   <string name="hint_age">나이</string>
   <string name="hint_education">학력</string>
-  <string name="hint_awards">수상경력</string>
+  <string name="hint_certificate">자격증</string>
   <string name="hint_gender">성별</string>
   <string name="hint_time">시간</string>
   <string name="hint_height">키 (cm)</string>
