--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -39,7 +39,7 @@
   <string name="msg_login_cancelled">로그인이 취소되었습니다</string>
   <string name="msg_login_no_connection">인터넷에 연결되지 않았습니다</string>
   <string name="msg_unknown_error">알 수 없는 오류가 발생하였습니다</string>
-  <string name="msg_timetable_added">선택한 시간이 추가되었습니다</string>
+  <string name="msg_timetable_updated">선택한 시간이 업데이트되었습니다</string>
   <string name="msg_timetable_not_selected">최소 하나 이상 선택해야합니다</string>
   <string name="msg_profile_saved">프로필이 저장되었습니다</string>
   <string name="msg_profile_save_failed">프로필 저장을 실패했습니다</string>
