--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
   <string name="msg_login_cancelled">Login Cancelled</string>
   <string name="msg_login_no_connection">No internet connection</string>
   <string name="msg_unknown_error">Unknown error occurred</string>
-  <string name="msg_timetable_added">Added time table</string>
+  <string name="msg_timetable_updated">Updated time table</string>
   <string name="msg_timetable_not_selected">Select least one</string>
   <string name="msg_profile_saved">Saved profile</string>
   <string name="msg_profile_save_failed">Failed save profile</string>
