--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -57,6 +57,6 @@
   <string name="empty_user_extra">트레이너가 정보를 입력하지 않았습니다</string>
   <string name="hour_format_am">오전 %d:00</string>
   <string name="hour_format_pm">오후 %d:00</string>
-  <string name="timestamp_format">YYYY. MM. dd.</string>
+  <string name="timestamp_format">yyyy. MM. dd.</string>
   <string name="last_modified_format">마지막 수정 : %s</string>
 </resources>
